# rustautogui

./: .gitignore  CHANGELOG.md  Cargo.toml  Keyboard_Commands.txt  Keyboard_commands.md  LICENSE  README.md  build.rs
.github/workflows/: cargo_check.yml  ci.yml  clippy.yml  rustfmt.yml
examples/: display_mouse_coords.rs  find_image_move_mouse_and_input.rs  open_github_page.rs  opencl_example.rs
src/: errors.rs  lib.rs
src/core/: mod.rs
src/core/keyboard/: mod.rs
src/core/keyboard/linux/: mod.rs
src/core/keyboard/macos/: mod.rs
src/core/keyboard/windows/: mod.rs
src/core/mouse/: mod.rs  mouse_position.rs
src/core/mouse/linux/: mod.rs
src/core/mouse/macos/: mod.rs
src/core/mouse/windows/: mod.rs
src/core/screen/: mod.rs
src/core/screen/linux/: mod.rs
src/core/screen/macos/: mod.rs
src/core/screen/windows/: mod.rs
src/core/template_match/: fft_ncc.rs  mod.rs  open_cl.rs  opencl_kernel.rs  opencl_v2.rs  segmented_ncc.rs  slow_ncc.rs
src/data/: mod.rs  opencl.rs
src/data_structs/: mod.rs  opencl.rs
src/imgtools/: mod.rs
src/keyboard/: mod.rs
src/keyboard/linux/: mod.rs
src/keyboard/macos/: mod.rs
src/keyboard/windows/: mod.rs
src/mouse/: mod.rs  mouse_position.rs
src/mouse/linux/: mod.rs
src/mouse/macos/: mod.rs
src/mouse/windows/: mod.rs  mouse_position.rs
src/normalized_x_corr/: fast_segment_x_corr.rs  fft_ncc.rs  mod.rs  open_cl.rs  opencl_kernel.rs  opencl_v2.rs  slow_ncc.rs
src/rustautogui_impl/: keyboard_impl.rs  mod.rs  mouse_impl.rs
src/rustautogui_impl/template_match_impl/: find_img_impl.rs  load_img_impl.rs  mod.rs
src/safe_mode/: mod.rs
src/safe_mode/keyboard/macos/: mod.rs
src/safe_mode/mouse/: mouse_position.rs
src/safe_mode/mouse/linux/: mod.rs
src/safe_mode/mouse/macos/: mod.rs
src/safe_mode/mouse/windows/: mod.rs
src/safe_mode/normalized_x_corr/: fast_segment_x_corr.rs  fft_ncc.rs  mod.rs  slow_ncc.rs
src/safe_mode/screen/linux/: mod.rs
src/safe_mode/screen/macos/: mod.rs
src/safe_mode/screen/windows/: mod.rs
src/screen/: mod.rs
src/screen/linux/: mod.rs
src/screen/macos/: mod.rs
src/screen/windows/: mod.rs
src/template_match/: fft_ncc.rs  mod.rs  open_cl.rs  opencl_kernel.rs  opencl_v2.rs  segmented_ncc.rs  slow_ncc.rs
src/unsafe_mode/: mod.rs
src/unsafe_mode/imgtools/: mod.rs
src/unsafe_mode/keyboard/windows/: mod.rs
src/unsafe_mode/mouse/: mouse_position.rs
src/unsafe_mode/mouse/macos/: mod.rs
src/unsafe_mode/mouse/windows/: mod.rs
src/unsafe_mode/normalized_x_corr/: fast_segment_x_corr.rs  fft_ncc.rs  slow_ncc.rs
src/unsafe_mode/screen/linux/: mod.rs
src/unsafe_mode/screen/macos/: mod.rs
src/unsafe_mode/screen/windows/: mod.rs
tests/: mouse_tests.rs  multi_test.rs  tmpl_match_tests.rs
